--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: 8088
 
 spring:
+  profiles:
+    include: oauth2
+
   datasource:
     url: jdbc:postgresql://localhost:5432/mark
     username: mark
